Changed java security policy so that I can use QuickTime for Java to grab images from a SequenceGrabber from the command line